DDF-3357 Adds distinguishment between dev and prod builds of Intrigue
 - Header and footer are now displayed on dev builds of Intrigue.
 - Hot reloading is now indicated, as well as the commit hash.  Also includes whether or not there were changes on top of the commit.
 - Still allows header and footer config, in case developers are testing them out.  Also allows closing the header and footer (if only the warning message).

--- a/catalog/ui/catalog-ui-search/src/main/webapp/templates/banner.layout.handlebars
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/templates/banner.layout.handlebars
@@ -11,6 +11,13 @@
  *
  **/
  --}}
-<div class="is-bold" style="color: {{ui.color}}; background-color: {{ui.background}}" title="{{ui.footer}}">
-    {{ui.footer}}
+<div class="is-bold" style="color: {{ui.color}}; background-color: {{ui.background}}" title="{{message}}">
+    <span class="is-development">Development Version</span>
+    <span class="is-hot-reloading"> with Hot Reloading</span> 
+    <span class="is-development"> : {{commitHash}}</span>
+    {{#if isDirty}}
+        <span class="is-development"> with Changes</span>
+    {{/if}}
+    {{message}}
+    <button class="is-development is-button is-neutral fa fa-times"></button>
 </div>
