--- a/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/content.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/content.less
@@ -21,7 +21,8 @@ body.has-header.has-footer #content {
 #alert,
 #ingest,
 #upload,
-#sources {
+#sources,
+#about {
   position: absolute;
   left: 0px;
   top: 0px;
@@ -35,7 +36,8 @@ body.has-header.has-footer #content {
 #alert,
 #ingest,
 #upload,
-#sources {
+#sources,
+#about {
   &.is-hidden {
     display: block !important;
     opacity: 0;
