--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/about/about.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/about/about.less
@@ -1,3 +1,26 @@
 @{customElementNamespace}about {
+    .customElement;
+    overflow: hidden;
+
+    .about-content {
+        margin: auto;
+        max-width: 1200px;
+        padding: @minimumSpacing 100px;
+        overflow: auto;
+        height: ~'calc(100% - 2*@{minimumLineSize})';
+    }
     
+    .content-version,
+    .version-message {
+        padding: @minimumSpacing;
+    }
 }
+
+.is-small-screen, .is-mobile-screen {
+    @{customElementNamespace}about {
+      .about-content {
+        max-width: 100%;
+        padding: @minimumSpacing;
+      }
+    }
+  }
