--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/component.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/component.less
@@ -208,3 +208,5 @@
 @import 'map-info/map-info';
 @import 'map-settings/map-settings';
 @import 'dropdown/map-settings/dropdown.map-settings.less';
+@import 'about/about';
+@import 'about-menu/about-menu';
