Admin Component Testing

--- a/platform/admin/ui/src/main/webapp/less/init.less
+++ b/platform/admin/ui/src/main/webapp/less/init.less
@@ -21,3 +21,4 @@
 @import "./application/init.less";
 @import "./configuration/init.less";
 @import "./installer/init.less";
+@import "../component/component.less";
