--- a/platform/admin/ui/src/main/webapp/less/variables.less
+++ b/platform/admin/ui/src/main/webapp/less/variables.less
@@ -12,6 +12,8 @@
  * <http://www.gnu.org/licenses/lgpl.html>.
  *
  **/
+//namespace
+@customElementNamespace: admin-;
 @bs-btn-primary-backbround-color: #2c3e50;
 @bs-btn-well-default-background-color: #ecf0f1;
 @bs-btn-success-background-color: #18bc9c;
