--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/navigation/navigation.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/navigation/navigation.less
@@ -20,7 +20,7 @@
   }
 
   > .navigation-left {
-    width: @minimumButtonSize;
+    min-width: @minimumButtonSize;
     transition: width @coreTransitionTime ease-out;
   }
 
