DDF-1983 Use getImageSrc function

--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/navigation-left/navigation-left.hbs
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/navigation-left/navigation-left.hbs
@@ -20,6 +20,6 @@
 </button>
 {{#if showLogo}}
 <span>
-     <img src="data:image/png;base64,{{logo}}"/>
+     <img src="{{getImageSrc logo}}"/>
 </span>
 {{/if}}
