--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/navigation/navigation.hbs
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/navigation/navigation.hbs
@@ -15,7 +15,7 @@
     <span class="fa fa-times"></span>
     <span>Cancel Drawing</span>
 </button>
-<div class="navigation-left">
+<div class="navigation-left is-button is-img">
 </div>
 <div class="navigation-middle">
     <!-- Meant to be used on multiple pages, but the other elements are static -->
