--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/navigation-left/navigation-left.hbs
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/navigation-left/navigation-left.hbs
@@ -11,7 +11,7 @@
  *
  **/
  --}}
-<button class="is-button" data-help="Click here to bring up the navigator.">
+<button data-help="Click here to bring up the navigator.">
     <span class="fa fa-bars"></span>
     <div class="navigation-indicator"></div>
     <span class="navigation-sources fa fa-bolt">
