--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/navigation/navigation.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/navigation/navigation.less
@@ -5,8 +5,6 @@
   vertical-align: top;
   color: @text-color;
   height: 2*@minimumLineSize;
-  overflow: hidden;
-  white-space: nowrap;
   border-bottom: 1px solid rgba(255, 255, 255, .10);
 
   > .navigation-left,
@@ -57,20 +55,36 @@
   }
 }
 
-@{customElementNamespace}navigation.has-logo {
+@{customElementNamespace}navigation.has-logo-1-to-1 {
   > .navigation-left {
-    width: 2.0*@minimumButtonSize;
+    width: 2.0*@minimumButtonSize + 0.625rem;
   }
 
   > .navigation-middle {
-      width: ~'calc(100% - 6*@{minimumButtonSize} - 9rem)';
-    }
+    width: ~'calc(100% - 6*@{minimumButtonSize} - 9rem)';
+  }
 
-    &.has-unavailable, &.has-unsaved {
+  &.has-unavailable, &.has-unsaved {
     > .navigation-middle{
       width: ~'calc(100% - 9*@{minimumButtonSize} - 0.625rem)';
     }
+  }
+}
+
+@{customElementNamespace}navigation.has-logo-1-to-2 {
+  > .navigation-left {
+    width: 3.0*@minimumButtonSize + 0.625rem;
+  }
+
+  > .navigation-middle {
+    width: ~'calc(100% - 7*@{minimumButtonSize} - 9rem)';
+  }
+
+  &.has-unavailable, &.has-unsaved {
+    > .navigation-middle{
+      width: ~'calc(100% - 10*@{minimumButtonSize} - 0.625rem)';
     }
+  }
 }
 
 html.is-drawing {
