DDF-1983 Only allow square logos

--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/navigation-left/navigation-left.hbs
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/navigation-left/navigation-left.hbs
@@ -17,9 +17,7 @@
     <span class="navigation-sources fa fa-bolt">
     </span>
      <span class="navigation-multiple fa fa-exclamation"></span>
-</button><!--
-    This comment removes the whitespace before this inline-block div
-    -->{{#if showLogo}}<div class="logo-holder">
-  <img class="logo" src="{{getImageSrc logo}}"/>
-</div>
+</button>
+{{#if showLogo}}
+<img class="logo" src="{{getImageSrc logo}}"/>
 {{/if}}
