--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/navigation-left/navigation-left.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/navigation-left/navigation-left.less
@@ -59,35 +59,15 @@
         transition: transform @coreTransitionTime ease-out, opacity @coreTransitionTime ease-out;
     }
 
-    &.has-logo-1-to-2 {
-
-      .logo-holder {
-        width: 2.0*@minimumButtonSize;
-        height: 100%;
-        text-align: center;
-        display: inline-block;
-
-        .logo {
-          max-width: 2*@minimumButtonSize;
-          max-height: @minimumButtonSize;
-          vertical-align: middle;
+    &.has-logo {
+        img {
+            max-width: @minimumButtonSize;
+            max-height: @minimumButtonSize;
+            vertical-align: top;
+            position: relative;
+            top: 50%;
+            transform: translateY(-50%);
         }
-      }
-    }
-
-    &.has-logo-1-to-1 {
-      .logo-holder {
-        width: @minimumButtonSize;
-        height: 100%;
-        text-align: center;
-        display: inline-block;
-
-        .logo {
-          max-width: @minimumButtonSize;
-          max-height: @minimumButtonSize;
-          vertical-align: middle;
-        }
-      }
     }
 
     &.has-unavailable {
