DDF-3216 Readds notes view for queries, adds distinguishment between local and cloud workspaces

--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/query-interactions/query-interactions.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/query-interactions/query-interactions.less
@@ -53,3 +53,9 @@
     display: none !important;
   }
 }
+
+@{customElementNamespace}query-interactions.is-local {
+  .interaction-annotations {
+    display: none !important;
+  }
+}
