--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/workspace-interactions/workspace-interactions.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/workspace-interactions/workspace-interactions.less
@@ -45,3 +45,12 @@
     display: none;
   }
 }
+
+@{customElementNamespace}workspace-interactions.is-local {
+  .interaction-subscribe,
+  .interaction-unsubscribe,
+  .interaction-details,
+  .interaction-share {
+    display: none !important;
+  }
+}
