--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/query-interactions/query-interactions.hbs
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/query-interactions/query-interactions.hbs
@@ -53,6 +53,13 @@
         Search Historical
     </div>
 </div>
+<div class="query-interaction interaction-annotations" title="View Notes" data-help="View notes on the search.">
+    <div class="interaction-icon fa fa-sticky-note-o">
+    </div>
+    <div class="interaction-text">
+        View Notes
+    </div>
+</div>
 <div class="query-interaction interaction-feedback" title="Submit Feedback" data-help="Brings up a form to submit comments about your current search and it's results">
     <div class="interaction-icon fa fa-comment">
     </div>
