--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/workspace-details/workspace-details.hbs
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/workspace-details/workspace-details.hbs
@@ -19,5 +19,12 @@
     {{bind selector="> .choice-date" event="change:modified" key=(path "niceDate")}}
 </div>
 <div class="choice-owner" title="{{bindAttr attr="title" selector="> .choice-owner" event="change:metacard.owner" key=(path "owner")}}" data-help="The owner of the workspace.">
-    {{bind selector="> .choice-owner" event="change:metacard.owner" key=(path "owner")}}
+    {{#if localStorage}} 
+        <span class="fa fa-home"></span>
+    {{else}}
+        <span class="fa fa-cloud"></span>
+    {{/if}}
+    <span class='owner-id'>
+        {{bind selector="> .choice-owner > .owner-id" event="change:metacard.owner" key=(path "owner")}}
+    </span>
 </div>
