--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/navigation-left/navigation-left.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/navigation-left/navigation-left.less
@@ -1,6 +1,7 @@
 @{customElementNamespace}navigation-left {
     .customElement;
     position: relative;
+    overflow: hidden;
     cursor: pointer;
 
     button {
