--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/navigation-left/navigation-left.hbs
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/navigation-left/navigation-left.hbs
@@ -17,7 +17,4 @@
     <span class="navigation-sources fa fa-bolt">
     </span>
      <span class="navigation-multiple fa fa-exclamation"></span>
-</button>
-{{#if showLogo}}
-<img class="logo" src="{{getImageSrc logo}}"/>
-{{/if}}
+</button>{{#if showLogo}}<img class="logo" src="{{getImageSrc logo}}"/>{{/if}}
