DDF-3441 support ui color configuration

--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/alert-settings/alert-settings.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/alert-settings/alert-settings.less
@@ -23,7 +23,7 @@
     .property-label {
       height: @minimumButtonSize;
       line-height: @minimumButtonSize;
-      color: grey;
+      color: @text-color;
       .is-bold();
     }
   }
