--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/content-title/content-title.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/content-title/content-title.less
@@ -61,7 +61,7 @@
     text-decoration: none;
     outline-style: solid;
     outline-width: 1px;
-    outline-color: grey;
+    outline-color: @text-color;
     padding-right: 25px;
     transition-delay: 0s;
   }
