--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/property/property.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/property/property.less
@@ -21,7 +21,7 @@
 
   .property-label label {
     cursor: auto;
-    color: grey;
+    color: @text-color;
     .is-bold();
     max-width: ~'calc(100% - @{minimumButtonSize})';
     margin: 0px;
