--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/query-title/query-title.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/query-title/query-title.less
@@ -30,7 +30,7 @@
     text-decoration: none;
     outline-style: solid;
     outline-width: 1px;
-    outline-color: grey;
+    outline-color: @text-color;
     cursor: text;
   }
 
