--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/theme-settings/theme-settings.hbs
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/theme-settings/theme-settings.hbs
@@ -17,3 +17,23 @@
 </div>
 <div class="theme-animation">
 </div>
+<div class="theme-background-color">
+</div>
+<div class="theme-text-color">
+</div>
+<div class="theme-button-text-color">
+</div>
+<div class="theme-primary-color">
+</div>
+<div class="theme-positive-color">
+</div>
+<div class="theme-negative-color">
+</div>
+<div class="theme-warning-color">
+</div>
+<div class="theme-favorite-color">
+</div>
+<div class="theme-links-visited-color">
+</div>
+<div class="theme-links-color">
+</div>
