--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/theme-settings/theme-settings.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/theme-settings/theme-settings.less
@@ -6,7 +6,7 @@
         margin-top: 0px;
         margin-bottom: 0px;
         line-height: @minimumButtonSize;
-        color: grey;
+        color: @text-color;
     }
 
     button {
