--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/query-advanced/query-advanced.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/query-advanced/query-advanced.less
@@ -4,7 +4,7 @@
   overflow: hidden;
 
   .query-advanced-label {
-    color: grey;
+    color: @text-color;
     .is-bold();
     padding: @minimumSpacing;
     line-height: @minimumButtonSize;
