DDF-3441 Refactor vars for theming

--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/dropdown/hint/dropdown.hint.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/dropdown/hint/dropdown.hint.less
@@ -1,8 +1,8 @@
 @{customElementNamespace}dropdown.is-hint {
   display: block;
   position: absolute;
-  background: rgba(255, 255, 255, .3);
-  border: 1px solid rgba(255, 255, 255, .3);
+  background: @medium-lighten-inherited-background-color;
+  border: 1px solid @medium-lighten-inherited-background-color;
   cursor: pointer;
 
   div {
@@ -11,6 +11,6 @@
 }
 
 @{customElementNamespace}dropdown.is-hint:hover {
-  border: 1px solid rgba(255, 255, 255, 1);
+  border: 1px solid @heavily-lighten-inherited-background-color;
   transition: border @coreTransitionTime linear;
 }
