--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/golden-layout/golden-layout.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/golden-layout/golden-layout.less
@@ -19,6 +19,10 @@
         box-shadow: none !important;
     }
 
+    .lm_tab:hover {
+        color: @text-color !important;
+    }
+
     .lm_tabdropdown_list {
         background: @dropdown-background-color !important;
     }
@@ -150,6 +154,7 @@
     }
 
     .lm_tab.lm_active {
+        color: @text-color !important;
         background: @lighten-inherited-background-color !important;
     }
 
