--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/input/autocomplete/input-autocomplete.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/input/autocomplete/input-autocomplete.less
@@ -42,4 +42,5 @@
 
 .select2-container--default .select2-results__option--highlighted[aria-selected] {
     background: @lighten-inherited-background-color;
+    color: @text-color;
 }
