--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/location-old/location-old.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/location-old/location-old.less
@@ -19,6 +19,22 @@
     font-size: @minimumFontSize !important;
   }
 
+  .input-group > span.input-group-addon {
+    color: @text-color;
+  }
+
+  .input-group > .input-group-addon {
+    background: @background-color;
+    color: @text-color;
+    border: none;
+  }
+
+  .ui-multiselect.ui-widget {
+    background: @background-color;
+    color: @text-color;
+    border: none;
+  }
+
   div.multiselect span {
     font-weight: normal;
     font-size: @minimumFontSize;
