--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/map-info/map-info.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/map-info/map-info.less
@@ -9,7 +9,7 @@
     bottom: 0px;
     text-align: left;
     padding: @minimumSpacing;
-    background: rgba(0, 0, 0, .7);
+    background: @background-color;
     max-width: 50%; //text-shadow: 0px 0px 5px @dropdown-background-color, 0px 0px 5px @dropdown-background-color, 0px 0px 5px @dropdown-background-color, 0px 0px 5px @dropdown-background-color,  0px 0px 5px @dropdown-background-color,  0px 0px 5px @dropdown-background-color;
    
     .info-coordinates {
