--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/visualization/maps/map.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/visualization/maps/map.less
@@ -21,6 +21,12 @@
 @{customElementNamespace}map {
   .cesium-button {
     vertical-align: top;
+    background: @background-color;
+    color: @text-color !important;
+  }
+
+  .cesium-button:focus {
+
   }
 
   .map-context-menu {
