--- a/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/buttons.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/buttons.less
@@ -48,7 +48,7 @@ button.is-positive {
 }
 
 button.is-neutral {
-  color: @text-color;
+  color: inherit;
   .button-mixin(@lighten-inherited-background-color);
   background: rgba(0,0,0,0);
 }
