--- a/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/jquery-ui.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/jquery-ui.less
@@ -1,6 +1,9 @@
 .ui-multiselect-menu {
     background: @dropdown-background-color;
     z-index: @zIndexDropdown;
+    label {
+        color: @text-color !important;
+    }
 }
 
 .ui-helper-reset {
