--- a/catalog/ui/catalog-ui-search/src/main/webapp/styles/mixins.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/styles/mixins.less
@@ -161,3 +161,7 @@
   border: 2px solid @lighten-inherited-background-color;
   border-radius: @border-radius;
 }
+
+.is-well {
+  border: @minimumSpacing solid @dropdown-background-color;
+}
