--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/announcement/announcement.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/announcement/announcement.less
@@ -8,6 +8,7 @@
     transform: translateX(-50%);
 
     .announcement {
+        color: @button-text-color;
         position: relative;
         padding: 0 10px;
         padding-bottom: 10px;
