--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/content/content.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/content/content.less
@@ -26,7 +26,7 @@
     width: @panelOneWidth;
     position: relative;
     transition: width @coreTransitionTime ease-in-out;
-    border-right: 1px solid rgba(255, 255, 255, .10);
+    border-right: 1px solid @lighten-inherited-background-color;
   }
 
   .content-panel.content-panelTwo {
