--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/navigation/navigation.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/navigation/navigation.less
@@ -3,11 +3,11 @@
   position: relative;
   background: @navigation-background-color;
   vertical-align: top;
-  color: @text-color;
+  color: contrast(@navigation-background-color);
   height: 2*@minimumLineSize;
   overflow: hidden;
   white-space: nowrap;
-  border-bottom: 1px solid rgba(255, 255, 255, .10);
+  border-bottom: 1px solid @lighten-inherited-background-color;
 
   > .navigation-left,
   > .navigation-middle,
