--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/slideout/slideout.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/slideout/slideout.less
@@ -20,6 +20,7 @@
 
     > .slideout-content {
         background: @navigation-background-color;
+        color: contrast(@navigation-background-color);
         position: fixed;
         z-index: @zIndexSlideout;
         left: 100%;
